# projet-progav

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
.github/workflows/: ci.yml  compile.yml
include/: GameEngine.h  SDLWrapper.h  ScreenManager.h  brick.h  colors.h  config.h  const.h  game-engine.h  game-manager.h  game.h  screen-manager.h  sdl-wrapper.h  utils.h  vector2D.h  window.h
include/entities/: ball.h  brick.h  entity.h  paddle.h
include/lib/: colors.h  const.h  utils.h
include/screens/: TitleScreen.h  game-screen.h  menu-screen.h  screen-manager.h  screen.h  title-screen.h
levels/: 2.lvl  3.lvl  4.lvl  5.lvl  6.lvl
src/: GameEngine.cpp  SDLWrapper.cpp  ScreenManager.cpp  brick.cpp  game-engine.cpp  game-manager.cpp  game.cpp  main.c  main.cpp  screen-manager.cpp  sdl-wrapper.cpp  window.cpp
src/entities/: ball.cpp  brick.cpp  paddle.cpp
src/game-object/: brick.cpp
src/screens/: TitleScreen.cpp  game-screen.cpp  menu-screen.cpp  screen-manager.cpp  title-screen.cpp
